--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGODB_URL=mongodb+srv://areebali:areebali@cluster0.cgzgpyf.mongodb.net
 CLOUDINARY_API_KEY=777214557368933
 CLOUDINARY_SECRET_KEY=EDu-lzdQTKbI4FJ0_U-fpVcol4U
 CLOUDINARY_CLOUD_NAME=dkbtznx74
+JWT_SECRET=shopai_secret_key_areebali_1234567890_shop.ai_mniaaaiamacssiupjc
