Implement admin login functionality and add admin authentication middleware

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ CLOUDINARY_API_KEY=777214557368933
 CLOUDINARY_SECRET_KEY=EDu-lzdQTKbI4FJ0_U-fpVcol4U
 CLOUDINARY_CLOUD_NAME=dkbtznx74
 JWT_SECRET=shopai_secret_key_areebali_1234567890_shop.ai_mniaaaiamacssiupjc
+ADMIN_EMAIL=areeb@gmail.com
+ADMIN_PASSWORD=areeb@12345
